# dispatcher

./: AUTHORS  ChangeLog  Makefile.in  autogen.sh  config.h.in  configure.in  dispatcher.h  test.c
dispatcher/: ChangeLog  Makefile  Makefile.in  README  config.h.in  configure  configure.in  dispatcher.c  dispatcher.h  global.h  make-package.sh  test.c
