#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(dispatcher, [0.9], michal@nexopia.com)
AC_CONFIG_SRCDIR([dispatcher.c])
AC_CONFIG_HEADER([config.h])
AC_PREFIX_DEFAULT(/nexopia)

AC_ARG_ENABLE(release,
 AC_HELP_STRING(--enable-release, compile in release mode),
[if test x$enableval = xyes; then
    CFLAGS="$CFLAGS -Os -pedantic -Wall"
fi])

AC_ARG_ENABLE(debug,
 AC_HELP_STRING(--enable-debug, compile with debugging info),
[if test x$enableval = xyes; then
    CFLAGS="$CFLAGS -g -O0 -pedantic -Wall"
fi])

# Checks for programs.
AC_PROG_CC_C99

# Checks for libraries.
trymysqldir=""
AC_ARG_WITH(mysql,
        [  --with-mysql=PATH       specify path to MySQL installation ],
        [
                if test "x$withval" != "xno" ; then
                        trymysqldir=$withval
                fi
        ]
)
# ------------------------------------------------------
# Where do you live, libmysqlclient?  And how do we call you?

AC_CACHE_CHECK([for libmysqlclient directory], LIBMYSQLDIR, [
  saved_LIBS="$LIBS"
  saved_LDFLAGS="$LDFLAGS"
  saved_CFLAGS="$CFLAGS"
  lib_found=no
  for mysqldir in $trymysqldir "" /nexopia/ $prefix /usr/local /usr/pkg; do
    LDFLAGS="$saved_LDFLAGS"
    LIBS="$saved_LIBS -lmysqlclient_r"

    # Skip the directory if it isn't there.
    if test ! -z "$mysqldir" -a ! -d "$mysqldir" ; then
       continue;
    fi
    if test ! -z "$mysqldir" ; then
      if test -d "$mysqldir/lib/mysql" ; then
        LDFLAGS="-L$mysqldir/lib/mysql $LDFLAGS"
      else
        LDFLAGS="-L$mysqldir $LDFLAGS"
      fi
      if test -d "$mysqldir/include/mysql" ; then
        CFLAGS="-I$mysqldir/include $CFLAGS"
      else
        CFLAGS="-I$mysqldir $CFLAGS"
      fi
    fi
    # Can I compile and link it?
    AC_TRY_LINK([#include <mysql/mysql.h>], [ my_init(); ],
       [ libmysql_linked=yes ], [ libmysql_linked=no ])
    if test $libmysql_linked = yes; then
       if test ! -z "$mysqldir" ; then
         LIBMYSQLDIR=$mysqldir/lib/mysql
       else
         LIBMYSQLDIR="(system)"
       fi
       lib_found=yes
       break
    fi
  done
  LIBS="$saved_LIBS"
  LDFLAGS="$saved_LDFLAGS"
  CPPFLAGS="$saved_CPPFLAGS"
  if test $lib_found = no ; then
    AC_MSG_ERROR([Could not find a linkable libmysqlclient. You can specify an explicit path using --with-mysql-dir])
  else
	AC_MSG_RESULT($LIBMYSQLDIR)
    AC_SUBST(LIBMYSQLDIR)
  fi
])

# Add rpath info
# RPATH is the path used to look for shared library files.
AC_MSG_CHECKING(RPATH)
if test -z "$RPATH"
then
  case $host in
  *-*-linux*) RPATH='-Wl,-rpath=$LIBMYSQLDIR/lib';;
  *) RPATH='';;
  esac
fi
AC_MSG_RESULT($RPATH)
AC_SUBST(RPATH)


# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([stdlib.h string.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_C_VOLATILE

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([memset])

AC_OUTPUT(Makefile)

